# rust-forum-server

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.test.yml
migrations/2023-04-26-020424_create_postscripts/: down.sql  up.sql
migrations/2023-05-18-110521_create_collected_posts/: down.sql  up.sql
sql-tables/2023-05-18-110424_create_posts/: up.sql
sql-tables/2023-05-18-110453_create_comments/: down.sql  up.sql
sql-tables/collected_posts/: up.sql
sql-tables/comments/: up.sql
sql-tables/posts/: down.sql  up.sql
sql-tables/users/: up.sql
src/: main.rs  migrations.rs  models.rs  my_tracing.rs  pool.rs  router.rs  schema.rs  session.rs
src/controllers/: auth.rs  comment.rs  home.rs  mod.rs  post.rs  user.rs
src/models/: auth.rs  comment.rs  mod.rs  post.rs  response.rs
src/modules/: mod.rs
src/modules/auth/: controllers.rs  utils.rs
src/modules/collected_post/: controllers.rs  models.rs
src/modules/comment/: controllers.rs
src/modules/pagination/: models.rs  utils.rs
src/modules/post/: controllers.rs
src/modules/postscript/: controllers.rs  models.rs
src/modules/request/: utils.rs
src/modules/response/: mod.rs  models.rs  utils.rs
src/modules/session/: utils.rs
src/modules/user/: controllers.rs  mod.rs  models.rs  utils.rs
src/sql-tables/: users.sql
src/utils/: check_email.rs  email.rs  get_none_user.rs  get_page_info.rs  get_response.rs  get_user_info.rs  internal_error.rs  mod.rs  password_bcrypt.rs  pool.rs  response_error.rs  user_role.rs
