[package]
name = "rust-forum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
axum = "0.6.15"
axum-macros = "0.3.7"
axum-sessions = "0.5.0"
diesel = { version = "2.0.3", features = ["postgres"] }
diesel_migrations = "2.0.0"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
bcrypt = "0.14"
dotenvy = "0.15.7"
