[package]
name = "rust-forum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
axum = "0.6.18"
axum-sessions = "0.5.0"
diesel = { version = "2.0.4", features = ["postgres"] }
diesel_migrations = "2.0.0"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
serde = { version = "1.0.163", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = "0.8.5"
bcrypt = "0.14.0"
dotenvy = "0.15.7"
check-if-email-exists = "0.9.0"
lettre = "0.10.4"
